WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83587
[Qt] Fix issues when using the WebView as ShaderEffectSource
https://bugs.webkit.org/show_bug.cgi?id=83587
Summary
[Qt] Fix issues when using the WebView as ShaderEffectSource
Jocelyn Turcotte
Reported
2012-04-10 09:36:16 PDT
[Qt] Fix issues when using the WebView as ShaderEffectSource
Attachments
Patch
(11.01 KB, patch)
2012-04-10 10:12 PDT
,
Jocelyn Turcotte
no flags
Details
Formatted Diff
Diff
Patch
(11.98 KB, patch)
2012-04-10 11:33 PDT
,
Jocelyn Turcotte
noam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jocelyn Turcotte
Comment 1
2012-04-10 10:12:15 PDT
Created
attachment 136480
[details]
Patch
Noam Rosenthal
Comment 2
2012-04-10 10:38:49 PDT
Comment on
attachment 136480
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136480&action=review
> Source/WebCore/platform/graphics/texmap/TextureMapper.h:126 > + virtual void beginPainting(bool mirrored = false) { }
Boolean trap. Let's make it an enum.
> Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:500 > +static inline TransformationMatrix createProjectionMatrix(const IntSize& size, bool mirrored)
While we're at it, let's make this an enum (probably the same enum).
Jocelyn Turcotte
Comment 3
2012-04-10 11:33:40 PDT
Created
attachment 136495
[details]
Patch Using PaintingFlag instead of a mirrored bool. It felt a bit stretched to use the generic flag in the createProjectionMatrix static method so I leaved it as before but used const bools for the mirrored parameter in callers.
Noam Rosenthal
Comment 4
2012-04-10 11:42:10 PDT
Comment on
attachment 136495
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136495&action=review
> Source/WebCore/platform/graphics/texmap/TextureMapper.h:107 > + enum PaintingFlag { > + PaintingMirrored = 1 << 0,
PaintFlag(s)
Jocelyn Turcotte
Comment 5
2012-04-11 07:51:06 PDT
Committed
r113859
: <
http://trac.webkit.org/changeset/113859
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug